--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -11,14 +11,14 @@
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 
-  background-color: rgba($color-default-black, 0.8);
+  background-color: rgba($base-color-dark, 0.8);
   transform: scale(1.2);
   visibility: hidden;
   opacity: 0;
 
-  transition: opacity $trans-modal,
-    transform $trans-modal,
-    visibility $trans-modal;
+  // transition: opacity $trans-modal,
+  //   transform $trans-modal,
+  //   visibility $trans-modal;
 
   pointer-events: none;
 
@@ -40,9 +40,9 @@
     min-height: 100%;
     padding: 60px 40px;
 
-    @include vp-767 {
-      padding: 60px 16px;
-    }
+    // @include vp-767 {
+    //   padding: 60px 16px;
+    // }
   }
 
   &__overlay {
@@ -62,12 +62,12 @@
     width: 600px;
     padding: 40px;
 
-    background-color: $color-default-white;
+    background-color: $base-color-light;
 
-    @include vp-767 {
-      width: 100%;
-      padding: 20px;
-    }
+    // @include vp-767 {
+    //   width: 100%;
+    //   padding: 20px;
+    // }
   }
 
   &__close-btn {
@@ -80,7 +80,7 @@
     height: 40px;
     padding: 0;
 
-    background: $color-transparent;
+    background: $base-color-light;
     border: none;
     cursor: pointer;
   }
@@ -95,9 +95,9 @@
     .modal__content {
       width: auto;
 
-      @include vp-767 {
-        width: 100%;
-      }
+      // @include vp-767 {
+      //   width: 100%;
+      // }
     }
   }
 
