--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,58 +1,27 @@
 // Colors
-// ---------------------------------
+$base-color-dark: #041827;
+$base-color-light: #E5E5E5;
+$base-color-primary: #00B2FF;
+$base-color-white: #FFFFFF;
+// Text-colors
+$text-color-light: #F2F5F6;
+$text-color-dark: #041827;
+$text-color-alt: #00B2FF;
+$text-color-white: #FFFFFF;
+// Pallete
+$black-pearl: #041427;
 
-// Default
-
-$color-default-black:               #000000;
-$color-default-white:               #ffffff;
-$color-transparent:                 rgba(255, 255, 255, 0);
-
-// Project palette
-// для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
-
-$color-neon-blue:                   #2c39f2;
-$color-torch-red:                   #ff1553;
-
-// Gradient
-
-$black-to-right:                    linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
+// Gradients
+$header-gradient: linear-gradient(180deg, #041827 84.9%, rgba(4, 24, 39, 0) 100%);
 
 // Typography
-// ---------------------------------
-
-// переменная используемая в html для подключения скейлинга
-$fz-default:                        16px;
-
-// у некоторых шрифтов в ios возникают проблемы с символом рубля
-// https://www.artlebedev.ru/kovodstvo/sections/159/#13
-$ff-rouble:                         "Rouble", "Arial", sans-serif;
-
-$ff-placeholder:                    "Placeholder", "Arial", sans-serif;
-
-// Animation
-// ---------------------------------
-
-$tf-default:                        ease;
-$trans-default:                     0.3s $tf-default;
-
-// если требуется изинг отличный от $tf-default, то переменную называем не цифрой
-$trans-modal:                       0.6s cubic-bezier(0.55, 0, 0.1, 1);
-
-$trans-600:                         0.6s $tf-default;
+$ff-pt-mono: "PT Mono", "Times New Roman", serif;
+$ff-roboto-condensed: "Roboto Condensed", "Arial", sans-serif;
+$ff-roboto: "Roboto", "Arial", sans-serif;
 
 // Viewports
-// ---------------------------------
-
-$vp-320:                            320px;
-$vp-375:                            375px;
-$vp-768:                            768px;
-$vp-1024:                           1024px;
-$vp-1280:                           1280px;
-$vp-1440:                           1440px;
-$vp-1920:                           1920px;
-
-// Retina
-// ---------------------------------
-
-$retina-dpi:                        144dpi;
-$retina-dppx:                       1.5dppx;
+$mobile-width: 320px;
+$mobile-width-only: 767px;
+$tablet-width: 768px;
+$tablet-width-only: 1023px;
+$desktop-width: 1024px;
