--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,48 +1,92 @@
 .header {
-  min-height: 110px;
-  background: $header-gradient;
+  padding: 30px 0 15px;
+
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
   box-sizing: border-box;
+  z-index: 10;
+
+  background-color: $base-color-dark;
+  box-shadow: 0 0 15px 15px $base-color-dark;
+
+  @media (max-width: $mobile-width) {
+    min-height: 70px;
+  }
+
+  @media (max-width: $tablet-width-only) {
+    padding: 20px 0 10px;
+    min-height: 70px;
+  }
 }
 
 .header__container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: $base-color-light;
   box-sizing: border-box;
+  gap: 10px;
+  flex-wrap: wrap;
+
+  color: $base-color-light;
 }
 
 .header__logo {
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
 }
 
 .header__info {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  column-gap: 100px;
-  row-gap: 30px;
+  display: grid;
+  grid-template-columns: repeat(2, 225px);
+  column-gap: 30px;
+  row-gap: 15px;
+  grid-auto-flow: dense;
+  align-items: flex-start;
+
+  @media (max-width: $tablet-width-only) {
+    padding: 10px;
+    display: flex;
+  }
 }
 
-.header__info a {
-  color: $text-color-light;
+.header__info-link {
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
-  gap: 15px;
+  gap: 10px;
+
+  color: $text-color-light;
+  font-family: 'PT Mono';
+  line-height: 18px;
+
+  @media (max-width: $tablet-width-only) {
+    padding: 10px;
+  }
+}
+
+.header__info-link svg {
+  fill: $base-color-primary;
+}
+
+.header__info-link span {
+  @media (max-width: $tablet-width-only) {
+    display: none;
+  }
 }
 
 .header__button {
-  border: 1px solid $text-color-light;
-  border-radius: 3px;
-  padding: 10px 15px;
+  padding: 10px 16px;
+  max-width: 160px;
+
   font-size: 14px;
   line-height: 16px;
+
+  border: 1px solid $text-color-light;
+  border-radius: 3px;
+
+  @media (max-width: $tablet-width-only) {
+    display: none;
+  }
 }
