--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,6 +10,9 @@
 
 // Blocks
 @import "blocks/button";
+@import "blocks/about";
+@import "blocks/features";
+@import "blocks/intro";
 @import "blocks/logo";
 @import "blocks/modal";
 @import "blocks/header";
