--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,6 +10,7 @@
 
 // Blocks
 @import "blocks/button";
+@import "blocks/products";
 @import "blocks/about";
 @import "blocks/features";
 @import "blocks/intro";
