--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -21,7 +21,7 @@
     inset 0px 0px 0px 1px $whisper;
   box-sizing: border-box;
   outline: none;
-  transition: background-color 200ms;
+  transition: 200ms;
 
   &:hover,
   &:focus {
