--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -16,9 +16,9 @@
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 29%);
   grid-auto-flow: dense;
-  gap: 85px;
+  justify-content: space-between;
   box-sizing: border-box;
 }
 
