--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,6 +11,8 @@
 // Blocks
 @import "blocks/button";
 @import "blocks/products";
+@import "blocks/connection";
+@import "blocks/form";
 @import "blocks/about";
 @import "blocks/features";
 @import "blocks/intro";
