--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -12,7 +12,8 @@ $text-color-white: #FFFFFF;
 $black-pearl: #041427;
 $whisper: #EBEBEB;
 $alice-blue: #F8FDFF;
-$primary-darker: rgba(4, 24, 39, 0.5);
+$primary-darker-1: rgba(4, 24, 39, 0.5);
+$primary-darker-2: rgba(4, 20, 39, 0.15);
 
 // Gradients
 $intro-gradient: linear-gradient(180deg, rgba(25, 32, 36, 0.7) 71.72%, rgba(25, 32, 36, 0) 100%);
