--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -8,10 +8,10 @@
 
 .intro__container {
   padding: 205px 0 280px;
+  width: 70%;
 }
 
 .intro__info {
-  max-width: 720px;
   margin: 0 auto;
 }
 
@@ -36,6 +36,7 @@
 }
 
 .intro__link {
+  max-width: 410px;
   padding: 15px 25px;
   border-radius: 3px;
 }
