--- a/source/sass/global/reboot.scss
+++ b/source/sass/global/reboot.scss
@@ -17,6 +17,7 @@ html {
   font-family: $ff-roboto-condensed;
   font-size: 16px;
   color: $text-color-dark;
+  scroll-behavior: smooth;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
