--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,5 +1,7 @@
 .button {
-  display: inline-flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   border: none;
   cursor: pointer;
