--- a/source/sass/blocks/connection.scss
+++ b/source/sass/blocks/connection.scss
@@ -1,6 +1,8 @@
 .connection {
-  background-color: $base-color-primary;
+  // background-color: $base-color-primary;
   padding: 170px 0 250px;
+  background-color: $base-color-primary;
+  background: $connection-gradient;
 }
 
 .connection__container {
