--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -22,6 +22,7 @@
 }
 
 .header__container {
+  width: 95%;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -41,8 +42,7 @@
 .header__info {
   display: grid;
   grid-template-columns: repeat(2, 225px);
-  column-gap: 30px;
-  row-gap: 15px;
+  gap: 15px 30px;
   grid-auto-flow: dense;
   align-items: flex-start;
 
