--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -1,11 +1,13 @@
 .products {
   padding: 70px 0 140px;
+
   background-color: $base-color-dark;
 }
 
 .products h2 {
   margin: 0;
   margin-bottom: 50px;
+
   font-weight: 400;
   font-size: 36px;
   line-height: 51px;
@@ -15,6 +17,7 @@
 .products__list {
   margin: 0;
   padding: 0;
+
   display: grid;
   grid-template-columns: repeat(3, 29%);
   grid-auto-flow: dense;
@@ -24,15 +27,36 @@
 
 .products__item a {
   padding: 50px 40px;
+
   min-height: 650px;
-  display: inline-block;
-  width: 100%;
   height: 100%;
+  width: 100%;
+
+  display: inline-block;
+  position: relative;
+
   font-size: 20px;
   line-height: 30px;
   color: $text-color-white;
-  background: url("../../img/main-prod.jpg") no-repeat;
+
+  background:
+    $products-gradient,
+    url("../../img/main-prod.jpg") no-repeat;
   background-size: cover;
+
+  &::before {
+    position: absolute;
+    content: "";
+    width: 60px;
+    height: 60px;
+    bottom: 0;
+    right: 0;
+    background:
+      url("data:image/svg+xml,%3Csvg width='5' height='10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M.476196 8.80957 4.28572 5.00005.476196 1.19052' stroke='%23fff' stroke-linejoin='round'/%3E%3C/svg%3E"),
+      $base-color-primary;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
 }
 
 .products__item:nth-child(1) a {
