--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,11 +14,14 @@
 @import "blocks/connection";
 @import "blocks/form";
 @import "blocks/about";
+@import "blocks/footer-info";
 @import "blocks/features";
 @import "blocks/intro";
 @import "blocks/logo";
 @import "blocks/modal";
 @import "blocks/header";
+@import "blocks/footer";
+@import "blocks/socials";
 
 // ---------------------------------
 
