--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -16,10 +16,11 @@ $cerulean: #026593;
 $primary-darker-1: rgba(4, 24, 39, 0.5);
 $primary-darker-2: rgba(4, 20, 39, 0.15);
 
-// Gradients
+// Gradients & shadows
 $intro-gradient: linear-gradient(180deg, rgba(25, 32, 36, 0.7) 71.72%, rgba(25, 32, 36, 0) 100%);
 $products-gradient: linear-gradient($primary-darker-1, $primary-darker-1);
 $connection-gradient: linear-gradient(139deg, $cerulean 34%, $base-color-primary 34%);
+$header-shadow: 0 0 15px 15px $base-color-dark;
 
 // Typography
 $ff-pt-mono: "PT Mono", "Times New Roman", serif;
