--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,67 +1,81 @@
 .header {
-  padding: 30px 0 15px;
+  padding: 30px 0 35px;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
-  z-index: 10;
 
-  background-color: $base-color-dark;
-  box-shadow: $header-shadow;
+  background: $header-gradient;
+
+  position: fixed;
+  z-index: 100;
+
+  @include vp-1023 {
+    padding: 20px 0 25px;
+  }
 }
 
 .header__container {
-  // display: flex;
-  // align-items: center;
-  // justify-content: space-between;
-  // gap: 10px;
-  // flex-wrap: wrap;
-  display: grid;
-  grid-template-columns: 27% auto 27%;
-  column-gap: 4%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 
   box-sizing: border-box;
   color: $base-color-light;
 }
 
 .header__info {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px 10%;
+  width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
+
+  @include vp-1023 {
+    width: 100%;
+    margin-right: 20px;
+  }
 }
 
 .header__info-link {
+  padding: 0;
   display: flex;
   align-items: center;
-  align-self: center;
 
-  color: $text-color-light;
   font-family: 'PT Mono';
   line-height: 18px;
+  color: $text-color-light;
 
-  @media (max-width: $tablet-width-only) {
+  @include vp-1023 {
     padding: 10px;
   }
 }
 
 .header__info-link svg {
-  fill: $base-color-primary;
   margin-right: 15px;
+  fill: $base-color-primary;
+
+  @include vp-1023 {
+    margin-right: 0;
+  }
 }
 
 .header__info-link span {
-  @media (max-width: $tablet-width-only) {
+  @include vp-1023 {
     display: none;
   }
 }
 
 .header__button {
-  margin-left: auto;
   margin-right: 60px;
   padding: 10px 16px;
-  max-width: 160px;
+  width: 160px;
+  display: none;
 
   font-size: 14px;
   line-height: 16px;
@@ -69,7 +83,7 @@
   border: 1px solid $text-color-light;
   border-radius: 3px;
 
-  @media (max-width: $tablet-width-only) {
+  @include vp-1023 {
     display: none;
   }
 }
