--- a/source/sass/blocks/socials.scss
+++ b/source/sass/blocks/socials.scss
@@ -1,14 +1,22 @@
 .socials {
+  margin: 0;
+  margin-left: 10px;
+  padding: 0;
+  max-width: 150px;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
-  max-width: 150px;
-  margin-left: 10px;
+}
+
+.socials__item {
+  list-style: none;
 }
 
 .socials__link {
   width: 40px;
   height: 40px;
+
   display: flex;
   flex-direction: column;
   align-items: center;
