--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -1,6 +1,9 @@
 .container {
-  width: 100%;
-  max-width: 1260px;
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 $base-indent;
+  width: 100%;
+
+  @media (min-width: $vp-1024) {
+    max-width: calc($vp-1220 + $base-indent * 2);
+  }
 }
