--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -36,83 +36,33 @@
 //   }
 // }
 
-// // Desktop first
+// Desktop first
+@mixin vp-1023 {
+  @media (max-width: ($vp-1024 - 1px)) {
+    @content;
+  }
+}
 
-// @mixin vp-1919 {
-//   @media (max-width: ($vp-1920 - 1px)) {
+@mixin vp-767 {
+  @media (max-width: ($vp-768 - 1px)) {
+    @content;
+  }
+}
+
+// Mobile first
+// @mixin vp-768 {
+//   @media (min-width: $vp-768) {
 //     @content;
 //   }
 // }
 
-// @mixin vp-1439 {
-//   @media (max-width: ($vp-1440 - 1px)) {
+// @mixin vp-1024 {
+//   @media (min-width: $vp-1024) {
 //     @content;
 //   }
 // }
 
-// @mixin vp-1279 {
-//   @media (max-width: ($vp-1280 - 1px)) {
-//     @content;
-//   }
-// }
+// ---------------------------------
 
-// @mixin vp-1023 {
-//   @media (max-width: ($vp-1024 - 1px)) {
-//     @content;
-//   }
-// }
-
-// @mixin vp-767 {
-//   @media (max-width: ($vp-768 - 1px)) {
-//     @content;
-//   }
-// }
-
-// @mixin vp-374 {
-//   @media (max-width: ($vp-375 - 1px)) {
-//     @content;
-//   }
-// }
-
-// // Mobile first
-
-// // @mixin vp-375 {
-// //   @media (min-width: $vp-375) {
-// //     @content;
-// //   }
-// // }
-
-// // @mixin vp-768 {
-// //   @media (min-width: $vp-768) {
-// //     @content;
-// //   }
-// // }
-
-// // @mixin vp-1024 {
-// //   @media (min-width: $vp-1024) {
-// //     @content;
-// //   }
-// // }
-
-// // @mixin vp-1280 {
-// //   @media (min-width: $vp-1280) {
-// //     @content;
-// //   }
-// // }
-
-// // @mixin vp-1440 {
-// //   @media (min-width: $vp-1440) {
-// //     @content;
-// //   }
-// // }
-
-// // @mixin vp-1920 {
-// //   @media (min-width: $vp-1920) {
-// //     @content;
-// //   }
-// // }
-
-// // ---------------------------------
-
-// // не нужно добавлять свои миксины для ресета списков, обнуления кнопок и прочие
-// // этим вы усложняете работу команды, проверку вашего кода и будущую поддержку проекта
+// не нужно добавлять свои миксины для ресета списков, обнуления кнопок и прочие
+// этим вы усложняете работу команды, проверку вашего кода и будущую поддержку проекта
