--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -37,7 +37,7 @@
   gap: 20px;
 
   @include vp-1023 {
-    width: 100%;
+    width: auto;
     margin-right: 20px;
   }
 }
@@ -75,7 +75,6 @@
   margin-right: 60px;
   padding: 10px 16px;
   width: 160px;
-  display: none;
 
   font-size: 14px;
   line-height: 16px;
