--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,11 +1,16 @@
 .intro {
-  padding: 205px 0 280px;
-  min-height: 778px;
+  padding: 305px 0 280px;
+  min-height: 880px;
 
   background-color: $base-color-dark;
   background:
     $intro-gradient,
     url("../../img/main-prod.jpg") center/cover no-repeat;
+
+  @include vp-1023 {
+    min-height: 640px;
+    padding: 180px 0 205px;
+  }
 }
 
 .intro__container {
@@ -15,6 +20,10 @@
 .intro__info {
   margin: 0 auto;
   margin-left: 11%;
+
+  @include vp-1023 {
+    margin-left: 0;
+  }
 }
 
 .intro__text h2 {
@@ -54,4 +63,8 @@
   padding: 15px 25px;
 
   border-radius: 3px;
+
+  @include vp-1023 {
+    margin-left: 7%;
+  }
 }
