--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,17 +1,26 @@
 .about {
   padding: 60px 0 100px;
+
+  @include vp-1023 {
+    padding: 40px 0 80px;
+  }
 }
 
 .about__container {
   display: grid;
   grid-template-columns: 150px auto;
   column-gap: 100px;
+  align-items: flex-start;
+
+  @include vp-1023 {
+    column-gap: 20px;
+  }
 }
 
 .about__decor {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  // justify-content: center;
   align-items: center;
 
   transform: rotate(-180deg);
@@ -19,6 +28,7 @@
 }
 
 .about__decor span {
+  margin-bottom: 10px;
   font-weight: 700;
   font-size: 156px;
   line-height: 220px;
@@ -43,6 +53,7 @@
 
   font-size: 36px;
   line-height: 51px;
+  font-weight: 400;
 }
 
 .about__info p {
@@ -53,13 +64,17 @@
 }
 
 .about__button {
-  margin-top: 15px;
+  margin-top: 30px;
   width: 180px;
   padding: 13px;
 
   display: flex;
   justify-content: center;
-  
+
   font-size: 14px;
   line-height: 16px;
+
+  @include vp-1023 {
+    margin-top: 10px;
+  }
 }
