--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -4,22 +4,55 @@
 
   background-color: $base-color-dark;
   box-sizing: border-box;
+
+  @include vp-1023 {
+    padding-bottom: 65px;
+  }
 }
 
 .footer__container {
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  column-gap: 48px;
   box-sizing: border-box;
+
+  display: flex;
+  column-gap: 2.5%;
+
+  @include vp-1023 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px 35px;
+  }
+}
+
+.footer__links {
+  margin-right: auto;
+
+  @include vp-1023 {
+    margin-right: 0;
+    grid-column: 1/-1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .footer__logo {
   margin-bottom: 30px;
+
+  @include vp-1023 {
+    margin-bottom: 0;
+  }
 }
 
 .footer__navigation {
+  max-width: 38.5%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  column-gap: 48px;
+  column-gap: 6.4%;
   box-sizing: border-box;
+
+  @include vp-1023 {
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+  }
 }
