--- a/source/sass/blocks/socials.scss
+++ b/source/sass/blocks/socials.scss
@@ -7,6 +7,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @include vp-1023 {
+    gap: 15px;
+    margin-left: 0;
+  }
 }
 
 .socials__item {
