--- a/source/sass/blocks/products.scss
+++ b/source/sass/blocks/products.scss
@@ -6,6 +6,10 @@
   @include vp-1023 {
     padding: 60px 0 75px;
   }
+
+  @include vp-767 {
+    padding: 50px 0 86px;
+  }
 }
 
 .products h2 {
@@ -16,6 +20,25 @@
   font-size: 36px;
   line-height: 51px;
   color: $text-color-white;
+
+  & span:last-child {
+    display: none;
+  }
+
+  @include vp-767 {
+    font-size: 28px;
+    line-height: 140.62%;
+
+    & span:last-child {
+      display: block;
+      font-size: 28px;
+      line-height: 140.62%;
+    }
+
+    & span:first-child {
+      display: none;
+    }
+  }
 }
 
 .products__list {
@@ -60,16 +83,31 @@
     height: 60px;
     bottom: 0;
     right: 0;
+    border-top-left-radius: 1px;
     background:
       url("data:image/svg+xml,%3Csvg width='5' height='10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M.476196 8.80957 4.28572 5.00005.476196 1.19052' stroke='%23fff' stroke-linejoin='round'/%3E%3C/svg%3E"),
       $base-color-primary;
     background-repeat: no-repeat;
     background-position: center;
+    background-size: 12.7%;
   }
 
   @include vp-1023 {
     padding: 40px 45px;
     min-height: 250px;
+  }
+
+  @include vp-767 {
+    padding: 30px;
+    min-height: 250px;
+
+    font-size: 18px;
+    line-height: 30px;
+
+    &::before {
+      width: 40px;
+      height: 40px;
+    }
   }
 }
 
