--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -4,6 +4,10 @@
   @include vp-1023 {
     padding: 80px 0 40px;
   }
+
+  @include vp-767 {
+    padding: 50px 0 25px;
+  }
 }
 
 .features__list {
@@ -15,6 +19,11 @@
   gap: 30px;
 
   list-style: none;
+
+  @include vp-767 {
+    display: flex;
+    flex-direction: column;
+  }
 }
 
 .features__item {
@@ -45,6 +54,10 @@
       color: $text-color-light;
     }
   }
+
+  @include vp-767 {
+    padding: 30px 30px 35px;
+  }
 }
 
 .features__item svg {
@@ -61,10 +74,21 @@
   line-height: 34px;
   font-weight: 400;
   color: $text-color-alt;
+
+  @include vp-767 {
+    font-size: 20px;
+    line-height: 140.62%;
+  }
 }
 
 .features__item p {
   margin: 0;
 
+  line-height: 135%;
   font-family: 'PT Mono';
+
+  @include vp-767 {
+    font-size: 14px;
+    line-height: 135%;
+  }
 }
