--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -8,6 +8,11 @@
   @include vp-1023 {
     padding-bottom: 65px;
   }
+
+  @include vp-767 {
+    padding-top: 0;
+    padding-bottom: 35px;
+  }
 }
 
 .footer__container {
@@ -21,6 +26,28 @@
     grid-template-columns: 1fr 1fr;
     gap: 30px 35px;
   }
+
+  @include vp-767 {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    gap: 0;
+  }
+}
+
+.footer__links,
+.footer__navigation,
+.footer__contacts {
+  @include vp-767 {
+    border-bottom: 1px solid rgba(248, 253, 255, 0.7);
+  }
+}
+
+.footer__navigation,
+.footer__contacts {
+  @include vp-767 {
+    padding: 20px 25px;
+  }
 }
 
 .footer__links {
@@ -32,6 +59,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+  }
+
+  @include vp-767 {
+    padding: 35px 25px 30px;
+    flex-direction: column;
+    gap: 20px;
+    border-bottom: 1px solid rgba(248, 253, 255, 0.7);
   }
 }
 
