--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,6 +1,7 @@
 .header {
   padding: 30px 0 35px;
   width: 100%;
+  min-height: 120px;
 
   display: flex;
   flex-direction: column;
@@ -15,6 +16,12 @@
 
   @include vp-1023 {
     padding: 20px 0 25px;
+    min-height: 100px;
+  }
+
+  @include vp-767 {
+    padding: 15px 0 20px;
+    min-height: 70px;
   }
 }
 
@@ -39,6 +46,10 @@
   @include vp-1023 {
     width: auto;
     margin-right: 20px;
+  }
+
+  @include vp-767 {
+    margin-right: 10px;
   }
 }
 
@@ -80,9 +91,21 @@
   line-height: 16px;
 
   border: 1px solid $text-color-light;
-  border-radius: 3px;
 
   @include vp-1023 {
     display: none;
+  }
+}
+
+.header__logo {
+  @include vp-767 {
+    width: auto;
+  }
+}
+
+.header__logo svg {
+  @include vp-767 {
+    width: 35px;
+    height: 35px;
   }
 }
