--- a/source/sass/global/container.scss
+++ b/source/sass/global/container.scss
@@ -6,4 +6,8 @@
   @media (min-width: $vp-1024) {
     max-width: calc($vp-1220 + $base-indent * 2);
   }
+
+  @include vp-767 {
+    padding: 0 $alt-indent;
+  }
 }
