--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -16,9 +16,9 @@
   visibility: hidden;
   opacity: 0;
 
-  // transition: opacity $trans-modal,
-  //   transform $trans-modal,
-  //   visibility $trans-modal;
+  transition: opacity $trans-modal,
+    transform $trans-modal,
+    visibility $trans-modal;
 
   pointer-events: none;
 
@@ -39,10 +39,6 @@
     width: 100%;
     min-height: 100%;
     padding: 60px 40px;
-
-    // @include vp-767 {
-    //   padding: 60px 16px;
-    // }
   }
 
   &__overlay {
@@ -59,28 +55,33 @@
   &__content {
     position: relative;
 
-    width: 600px;
+    width: 500px;
     padding: 40px;
 
-    background-color: $base-color-light;
+    border-radius: 3px;
+    background-color: $base-color-primary;
 
-    // @include vp-767 {
-    //   width: 100%;
-    //   padding: 20px;
-    // }
+    @include vp-767 {
+      width: 100%;
+      padding: 20px;
+    }
   }
 
   &__close-btn {
     position: absolute;
-    top: 22px;
-    right: 22px;
+    top: 15px;
+    right: 15px;
     z-index: 1;
 
     width: 40px;
     height: 40px;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-    background: $base-color-light;
+    background-color: $base-color-primary;
     border: none;
     cursor: pointer;
   }
@@ -95,9 +96,9 @@
     .modal__content {
       width: auto;
 
-      // @include vp-767 {
-      //   width: 100%;
-      // }
+      @include vp-767 {
+        width: 100%;
+      }
     }
   }
 
