--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -7,7 +7,7 @@
   border-radius: 3px;
   cursor: pointer;
 
-  font-family: 'Roboto Condensed';
+  font-family: $ff-roboto-condensed;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.05em;
