--- a/source/sass/blocks/footer-info.scss
+++ b/source/sass/blocks/footer-info.scss
@@ -24,7 +24,7 @@
 }
 
 .footer-info__link {
-  font-family: 'PT Mono';
+  font-family: $ff-pt-mono;
   font-size: 16px;
   line-height: 135%;
   color: $text-color-white;
