--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -58,7 +58,7 @@
   display: flex;
   align-items: center;
 
-  font-family: 'PT Mono';
+  font-family: $ff-pt-mono;
   line-height: 18px;
   color: $text-color-light;
 
