--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -2,10 +2,10 @@
   padding: 305px 0 280px;
   min-height: 880px;
 
-  background-color: $base-color-dark;
   background:
     $intro-gradient,
-    url("../../img/main-prod.jpg") center/cover no-repeat;
+    url("../../img/main-prod.jpg") center/cover no-repeat,
+    $base-color-dark;
 
   @include vp-1023 {
     min-height: 640px;
@@ -62,7 +62,7 @@
   margin: 0;
   margin-bottom: 40px;
 
-  font-family: 'PT Mono';
+  font-family: $ff-pt-mono;
   font-size: 22px;
   line-height: 155%;
   color: $text-color-light;
@@ -88,10 +88,6 @@
   font-size: 18px;
   line-height: 21px;
 
-  & span:last-child {
-    display: none;
-  }
-
   @include vp-1023 {
     margin-left: 7%;
   }
@@ -103,13 +99,21 @@
 
     font-size: 14px;
     line-height: 16px;
+  }
+}
 
-    & span:last-child {
-      display: block;
-    }
-
-    & span:first-child {
+.intro__link span {
+  &:first-child {
+    @include vp-767 {
       display: none;
+    }
+  }
+
+  &:last-child {
+    display: none;
+
+    @include vp-767 {
+      display: block;
     }
   }
 }
