--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,20 +1,20 @@
 // Colors
 $base-color-dark: #041827;
 $base-color-dark-opacity: rgba($base-color-dark, 0.5);
-$base-color-light: #E5E5E5;
-$base-color-primary: #00B2FF;
-$base-color-white: #FFFFFF;
+$base-color-light: #e5e5e5;
+$base-color-primary: #00b2ff;
+$base-color-white: #ffffff;
 // Text-colors
-$text-color-light: #F2F5F6;
+$text-color-light: #f2f5f6;
 $text-color-dark: #041827;
-$text-color-alt: #00B2FF;
-$text-color-white: #FFFFFF;
+$text-color-alt: #00b2ff;
+$text-color-white: #ffffff;
 // Pallete
 $black-pearl: #041427;
 $black-pearl-opacity: rgba($black-pearl, 0.15);
-$whisper: #EBEBEB;
-$alice-blue: #F8FDFF;
-$modal-bg: rgba(#03101B, 0.7);
+$whisper: #ebebeb;
+$alice-blue: #f8fdff;
+$modal-bg: rgba(#03101b, 0.7);
 
 // Gradients & shadows
 $header-gradient: linear-gradient(180deg, $base-color-dark 84.9%, transparent 100%);
