--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -62,6 +62,14 @@
   line-height: 18px;
   color: $text-color-light;
 
+  @include hover-focus {
+    color: $text-color-white;
+
+    & svg {
+      fill: $base-color-primary-lighter;
+    }
+  }
+
   @include vp-1023 {
     padding: 10px;
   }
