--- a/source/sass/blocks/socials.scss
+++ b/source/sass/blocks/socials.scss
@@ -26,4 +26,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  @include hover-focus {
+    & svg {
+      fill: $base-color-primary;
+    }
+  }
+}
+
+.socials__link svg {
+  fill: $alice-blue;
 }
