--- a/source/sass/utils/accordion.scss
+++ b/source/sass/utils/accordion.scss
@@ -21,6 +21,18 @@
   }
 }
 
+.is-opened {
+  background-image: url("data:image/svg+xml,%3Csvg width='15' height='1' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 0h15v1H0V0Z' fill='%23F8FDFF'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: 90% center;
+}
+
+.is-closed {
+  background-image: url("data:image/svg+xml,%3Csvg width='15' height='15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M7.96875 7.03125V0h-.9375v7.03125H0v.9375h7.03125V15h.9375V7.96875H15v-.9375H7.96875Z' fill='%23F8FDFF'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: 90% center;
+}
+
 .accordion__element {
   @include vp-767 {
     border-bottom: 1px solid rgba(248, 253, 255, 0.7);
@@ -41,6 +53,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 6.4%;
+    user-select: none;
 
     @include vp-1023 {
       width: 100%;
@@ -73,4 +86,8 @@
   font-family: $ff-pt-mono;
   color: $text-color-white;
   opacity: 0.7;
+
+  @include hover-focus {
+    opacity: 0.8;
+  }
 }
